# flask-jinja-tutorial

./: .gitignore  Makefile  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/: dependabot.yml
flask_jinja_tutorial/: __init__.py  routes.py
flask_jinja_tutorial/static/css/: home.css
flask_jinja_tutorial/templates/: home.html  home.jinja2  layout.html  layout.jinja2  navigation.html  navigation.jinja2
