[tool.poetry]
name = "flask_jinja_tutorial"
version = "0.1.0"
description = "Build smarter page templates with Flask and Jinja."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
readme = "README.md"
homepage = "https://hackersandslackers.com/flask-page-templates-jinja/"
repository = "https://github.com/hackersandslackers/flask-jinja-tutorial/"
keywords = ["Flask", "Jinja2", "Jinja", "Templating", "Page Templates"]

[tool.poetry.dependencies]
python = "^3.10,<4"
flask = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"

[tool.poetry.scripts]
run = "main:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-jinja-tutorial/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
